Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 
 # Ignore Spring files.
 /spring/*.pid
+
+# Ignore .idea user-specific files.
+
+/.idea/workspace.xml
+/.idea/dictionaries/*
+/.idea/codeStyles/*
